--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
             padding: 40px;
             border-top: 2px solid #00f2ff;
         }
+        .form-container {
+    background: #1e293b;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
     </style>
 </head>
 
@@ -149,6 +155,7 @@
     <a href="#focus">Focus Areas</a>
     <a href="#vision">Vision</a>
     <a href="#author">Author</a>
+    <a href="#contact">Contact</a>
 </nav>
 
 <div class="container">
@@ -228,7 +235,25 @@
     </div>
 
 </div>
+<div class="section" id="contact">
+    <h2>Contact World Cyber Shield</h2>
+    <p>
+        Have cybersecurity questions or want to report a fraud issue?
+        Fill out the form below and we will review your message.
+    </p>
 
+    <div class="form-container">
+        <iframe 
+            src="https://docs.google.com/forms/d/e/1FAIpQLSdvwFcx7Tso-pIlRQxPedvdNWunXWHxPubkMKHnjzPLYSjq1Q/viewform?embedded=true"
+            width="100%"
+            height="850"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0">
+            Loading…
+        </iframe>
+    </div>
+</div>
 <footer>
     <p>© 2026 World Cyber Shield</p>
     <p>Developed by Raju Zevenor | Cybersecurity Awareness Initiative</p>
