--- a/index.html
+++ b/index.html
@@ -274,7 +274,6 @@
         </p>
     </div>
 
-</div>
 <div class="section" id="contact">
     <h2>Contact World Cyber Shield</h2>
     <p>
@@ -287,25 +286,23 @@
             src="https://docs.google.com/forms/d/e/1FAIpQLSdvwFcx7Tso-pIlRQxPedvdNWunXWHxPubkMKHnjzPLYSjq1Q/viewform?embedded=true"
             width="100%"
             height="850"
-            frameborder="0"
-            marginheight="0"
-            marginwidth="0">
+            frameborder="0">
             Loading…
         </iframe>
     </div>
-</div>
-    <div style="text-align:center; margin-top:20px;">
-    <button onclick="showSuccess()" class="success-btn">
-        I Have Submitted the Form
-    </button>
-</div>
 
-<div id="successMessage" class="success-message">
-    <div class="checkmark-circle">
-        ✓
+    <div style="text-align:center; margin-top:25px;">
+        <button onclick="showSuccess()" class="success-btn">
+            I Have Submitted the Form
+        </button>
     </div>
-    <h3>Submission Successful!</h3>
-    <p>Thank you for contacting World Cyber Shield.</p>
+
+    <div id="successMessage" class="success-message">
+        <div class="checkmark-circle">✓</div>
+        <h3>Submission Successful!</h3>
+        <p>Thank you for contacting World Cyber Shield.</p>
+    </div>
+
 </div>
 <footer>
     <p>© 2026 World Cyber Shield</p>
