Add closing script tag before showSuccess function

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
     sections.forEach(section => {
         observer.observe(section);
     });
+    </script>
 <script>
 function showSuccess() {
     const msg = document.getElementById("successMessage");
